samples/_failures_safe/1761598196_6f5541_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac1bd8a9.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ac1bd8a9.c:178:9: error: expected expression at end of input
  178 |         visited[i] =
      |         ^~~~~~~
./samples/SAFE/__tmp_ac1bd8a9.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ac1bd8a9.c:178:9: error: expected declaration or statement at end of input
